--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "atob": "^2.1.2",
+    "btoa": "^1.2.1",
     "lodash": "^4.17.21",
+    "octokat": "^0.10.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
+    "react-cookie": "^4.1.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-particles": "^2.10.1",
