save interaction data to db

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-particles": "^2.10.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tsparticles-engine": "^2.10.1",
     "tsparticles-preset-fireworks": "^2.10.1",
     "typescript": "^4.9.5",
