--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://kcrysa.github.io/WheelOfFortune",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -15,11 +14,13 @@
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "atob": "^2.1.2",
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
     "btoa": "^1.2.1",
     "lodash": "^4.17.21",
-    "octokat": "^0.10.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-code-blocks": "^0.0.9-0",
+    "react-code-blocks": "^0.1.4",
     "react-cookie": "^4.1.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
@@ -59,5 +60,6 @@
   "devDependencies": {
     "@types/lodash": "^4.14.195",
     "gh-pages": "^5.0.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
