--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@mui/x-data-grid": "^6.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +26,7 @@
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-particles": "^2.10.1",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "tsparticles-engine": "^2.10.1",
     "tsparticles-preset-fireworks": "^2.10.1",
